Upload BasicSite and notes

--- a/HTMLWorkspace/20.06.22/BasicSite.html
+++ b/HTMLWorkspace/20.06.22/BasicSite.html
@@ -1,11 +1,12 @@
 <html>
 	<head>
 		<title> Test Page for training </title>
+		<link rel="stylesheet" href="BasicStyle.css"></link>
 	</head>
 	<body>
-		<p>Test Button will be below</p>
-		<button onclick=randomFunction();> Button here </button>
-		
+		<p class="a">Here is some blue text</p>
+		<button class="b" onclick=randomFunction();> Test button here </button>
+		<p class="b">Here is some red text</p>
 		<script type='text/javascript' src='BasicSite.js'> </script>
 	</body>
 </html>
