Changes to BasicSite, multiple classes in a tag

--- a/HTMLWorkspace/20.06.22/BasicSite.html
+++ b/HTMLWorkspace/20.06.22/BasicSite.html
@@ -4,9 +4,9 @@
 		<link rel="stylesheet" href="BasicStyle.css"></link>
 	</head>
 	<body>
-		<p class="a">Here is some blue text</p>
+		<p class="a c">Here is some blue text</p>
 		<button class="b" onclick=randomFunction();> Test button here </button>
-		<p class="b">Here is some red text</p>
+		<p class="b c">Here is some red text</p>
 		<script type='text/javascript' src='BasicSite.js'> </script>
 	</body>
 </html>
