Changes to BasicSite, multiple classes in a tag

--- a/HTMLWorkspace/20.06.22/BasicSite.html
+++ b/HTMLWorkspace/20.06.22/BasicSite.html
@@ -6,7 +6,7 @@
 	<body>
 		<p class="a c">Here is some blue text</p>
 		<button class="b" onclick=randomFunction();> Test button here </button>
-		<p class="b c">Here is some red text</p>
+		<p class="b c d">Here is some red text</p>
 		<script type='text/javascript' src='BasicSite.js'> </script>
 	</body>
 </html>
