End of day 20.06.22

--- a/HTMLWorkspace/20.06.22/BasicSite.html
+++ b/HTMLWorkspace/20.06.22/BasicSite.html
@@ -4,9 +4,17 @@
 		<link rel="stylesheet" href="BasicStyle.css"></link>
 	</head>
 	<body>
-		<p class="a c">Here is some blue text</p>
-		<button class="b" onclick=randomFunction();> Test button here </button>
+		<div>
+			<div class="divright">
+				<p class="a c">Here is some blue text</p>
+			</div>
+			<div class="divleft">
+				<button class="b" onclick='randomFunction();'> Test button here </button>
+			</div>
+		</div>
+		<div>
 		<p class="b c d">Here is some red text</p>
+		</div>
 		<script type='text/javascript' src='BasicSite.js'> </script>
 	</body>
 </html>
