--- a/HTMLWorkspace/23.06.22/index.html
+++ b/HTMLWorkspace/23.06.22/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
-    <b>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At eos nobis quod, minus necessitatibus tenetur ex quo
-        unde dolores atque distinctio neque cumque, quia aspernatur aliquid rem optio delectus voluptate.</b>
+    index.html
 </body>
-
 </html>
